[gd_scene load_steps=28 format=2]

[ext_resource path="res://GUI/DarkTheme/Dark.theme" type="Theme" id=2]
[ext_resource path="res://Game/LobbyMultiplayer/LobbyMultiplayer.cs" type="Script" id=3]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar1_blue.png" type="Texture" id=4]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar2_black.png" type="Texture" id=5]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar1_green.png" type="Texture" id=6]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar2_blue.png" type="Texture" id=7]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar2_green.png" type="Texture" id=8]
[ext_resource path="res://Game/LobbyMultiplayer/Dialog0.gd" type="Script" id=9]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar1_yellow.png" type="Texture" id=10]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar2_red.png" type="Texture" id=11]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar2_yellow.png" type="Texture" id=12]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar1_red.png" type="Texture" id=13]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar1_black.png" type="Texture" id=14]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar4_black.png" type="Texture" id=15]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar4_yellow.png" type="Texture" id=16]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar4_green.png" type="Texture" id=17]
[ext_resource path="res://GUI/scenes/wall.tscn" type="PackedScene" id=18]
[ext_resource path="res://GUI/scenes/Selector.tscn" type="PackedScene" id=19]
[ext_resource path="res://Game/LobbyMultiplayer/Dialog0.tscn" type="PackedScene" id=20]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar4_red.png" type="Texture" id=21]
[ext_resource path="res://GUI/img/avatars-in-color_200x203/avatar4_blue.png" type="Texture" id=22]
[ext_resource path="res://Game/LobbyMultiplayer/Selector0.gd" type="Script" id=23]
[ext_resource path="res://GUI/img/ramka-wstega_200x203.png" type="Texture" id=24]
[ext_resource path="res://Game/LobbyMultiplayer/Selector1.gd" type="Script" id=25]
[ext_resource path="res://Game/LobbyMultiplayer/Selector2.gd" type="Script" id=26]
[ext_resource path="res://Game/LobbyMultiplayer/Selector3.gd" type="Script" id=27]
[ext_resource path="res://Game/LobbyMultiplayer/Selector4.gd" type="Script" id=28]

[node name="LobbyMulti" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="wall" parent="." instance=ExtResource( 18 )]

[node name="Play" type="Button" parent="."]
margin_left = 932.925
margin_top = 645.341
margin_right = 1268.92
margin_bottom = 712.341
text = "Play"

[node name="Quit" type="Button" parent="."]
margin_left = 10.0
margin_top = 645.341
margin_right = 345.995
margin_bottom = 712.341
text = "Quit"

[node name="Selector0" parent="." instance=ExtResource( 19 )]
position = Vector2( 200, 130 )
script = ExtResource( 23 )
selectorTexture = ExtResource( 24 )
avatarsOffset = Vector2( 0, 206 )

[node name="Selector1" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 403, 130 )
script = ExtResource( 25 )
selectorTexture = ExtResource( 24 )
avatarsOffset = Vector2( 0, 206 )

[node name="Selector2" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 606, 130 )
script = ExtResource( 26 )
selectorTexture = ExtResource( 24 )
avatarsOffset = Vector2( 0, 206 )

[node name="Selector3" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 809, 130 )
script = ExtResource( 27 )
selectorTexture = ExtResource( 24 )
avatarsOffset = Vector2( 0, 206 )

[node name="Selector4" parent="." instance=ExtResource( 19 )]
visible = false
position = Vector2( 1012, 130 )
script = ExtResource( 28 )
selectorTexture = ExtResource( 24 )
avatarsOffset = Vector2( 0, 206 )

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 100.0
margin_top = 30.0
margin_right = 1112.0
margin_bottom = 645.0
custom_constants/hseparation = 25
columns = 5

[node name="GridContainerAvatars" type="GridContainer" parent="GridContainer"]
margin_right = 403.0
margin_bottom = 615.0

[node name="HBoxContainerAvatar1" type="HBoxContainer" parent="GridContainer/GridContainerAvatars"]
margin_right = 403.0
margin_bottom = 203.0

[node name="Avatar1Red" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar1" groups=["Avatars_0"]]
margin_right = 200.0
margin_bottom = 203.0
texture = ExtResource( 13 )

[node name="Avatar1Black" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar1" groups=["Avatars_1"]]
margin_left = 203.0
margin_right = 403.0
margin_bottom = 203.0
texture = ExtResource( 14 )

[node name="Avatar1Blue" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar1" groups=["Avatars_2"]]
visible = false
margin_left = 406.0
margin_right = 606.0
margin_bottom = 203.0
texture = ExtResource( 4 )

[node name="Avatar1Yellow" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar1" groups=["Avatars_3"]]
visible = false
margin_left = 406.0
margin_right = 606.0
margin_bottom = 203.0
texture = ExtResource( 10 )

[node name="Avatar1Green" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar1" groups=["Avatars_4"]]
visible = false
margin_left = 406.0
margin_right = 606.0
margin_bottom = 203.0
texture = ExtResource( 6 )

[node name="HBoxContainerAvatar2" type="HBoxContainer" parent="GridContainer/GridContainerAvatars"]
margin_top = 206.0
margin_right = 403.0
margin_bottom = 409.0

[node name="Avatar2Red" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar2" groups=["Avatars_0"]]
margin_right = 200.0
margin_bottom = 203.0
texture = ExtResource( 11 )

[node name="Avatar2Black" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar2" groups=["Avatars_1"]]
margin_left = 203.0
margin_right = 403.0
margin_bottom = 203.0
texture = ExtResource( 5 )

[node name="Avatar2Blue" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar2" groups=["Avatars_2"]]
visible = false
margin_left = 203.0
margin_right = 403.0
margin_bottom = 203.0
texture = ExtResource( 7 )

[node name="Avatar2Yellow" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar2" groups=["Avatars_3"]]
visible = false
margin_left = 406.0
margin_right = 606.0
margin_bottom = 203.0
texture = ExtResource( 12 )

[node name="Avatar2Green" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar2" groups=["Avatars_4"]]
visible = false
margin_left = 609.0
margin_right = 809.0
margin_bottom = 203.0
texture = ExtResource( 8 )

[node name="HBoxContainerAvatar4" type="HBoxContainer" parent="GridContainer/GridContainerAvatars"]
margin_top = 412.0
margin_right = 403.0
margin_bottom = 615.0

[node name="Avatar4Red" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar4" groups=["Avatars_0"]]
margin_right = 200.0
margin_bottom = 203.0
texture = ExtResource( 21 )

[node name="Avatar4Black" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar4" groups=["Avatars_1"]]
margin_left = 203.0
margin_right = 403.0
margin_bottom = 203.0
texture = ExtResource( 15 )

[node name="Avatar4Blue" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar4" groups=["Avatars_2"]]
visible = false
margin_left = 203.0
margin_right = 403.0
margin_bottom = 203.0
texture = ExtResource( 22 )

[node name="Avatar4Yellow" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar4" groups=["Avatars_3"]]
visible = false
margin_left = 406.0
margin_right = 606.0
margin_bottom = 203.0
texture = ExtResource( 16 )

[node name="Avatar4Green" type="TextureRect" parent="GridContainer/GridContainerAvatars/HBoxContainerAvatar4" groups=["Avatars_4"]]
visible = false
margin_left = 609.0
margin_right = 809.0
margin_bottom = 203.0
texture = ExtResource( 17 )

[node name="Dialog0" parent="." instance=ExtResource( 20 )]
script = ExtResource( 9 )

[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar1/Avatar1Red" to="Selector0" method="_on_Avatar1Red_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar1/Avatar1Black" to="Selector1" method="_on_Avatar1Black_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar1/Avatar1Blue" to="Selector2" method="_on_Avatar1Blue_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar1/Avatar1Yellow" to="Selector3" method="_on_Avatar1Yellow_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar1/Avatar1Green" to="Selector4" method="_on_Avatar1Green_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar2/Avatar2Red" to="Selector0" method="_on_Avatar2Red_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar2/Avatar2Black" to="Selector1" method="_on_Avatar2Black_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar2/Avatar2Blue" to="Selector2" method="_on_Avatar2Blue_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar2/Avatar2Yellow" to="Selector3" method="_on_Avatar2Yellow_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar2/Avatar2Green" to="Selector4" method="_on_Avatar2Green_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar4/Avatar4Red" to="Selector0" method="_on_Avatar4Red_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar4/Avatar4Black" to="Selector1" method="_on_Avatar4Black_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar4/Avatar4Blue" to="Selector2" method="_on_Avatar4Blue_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar4/Avatar4Yellow" to="Selector3" method="_on_Avatar4Yellow_mouse_entered"]
[connection signal="mouse_entered" from="GridContainer/GridContainerAvatars/HBoxContainerAvatar4/Avatar4Green" to="Selector4" method="_on_Avatar4Green_mouse_entered"]
[connection signal="popup_hide" from="Dialog0" to="." method="OnPopupHide"]
